@@ -1,6 +1,3 @@
-*~
-*.swp
-*.swo
 *.a
 *.gcda
 *.gch
@@ -13,10 +10,11 @@
 *.log
 *.o
 *.so
+*.swo
+*.swp
 *.trs
-Makefile
-Makefile.in
-typescript
+*~
+/_configs.sed
 /aclocal.m4
 /ar-lib
 /autom4te.cache
@@ -25,7 +23,6 @@ typescript
 /config.h*
 /config.log
 /config.lt
-/_configs.sed
 /config.status
 /config.sub
 /configure
@@ -38,9 +35,21 @@ typescript
 /missing
 /stamp-h1
 /test-driver
+Makefile
+Makefile.in
+aclocal.m4
+ar-lib
+compile
+config.guess
+config.h.in
+config.sub
+configure
+depcomp
+doc/Makefile.in
 examples/.deps/
 examples/.libs/
 examples/7segment
+examples/Makefile.in
 examples/background-color
 examples/busy
 examples/calculator
@@ -78,6 +87,8 @@ examples/windows
 examples/xpmview
 final/.depend
 final/.deps/
+final/.libs/
+final/Makefile.in
 final/dialog/.depend
 final/dialog/.deps/
 final/dialog/.dirstamp
@@ -86,11 +97,11 @@ final/eventloop/.depend
 final/eventloop/.deps/
 final/eventloop/.dirstamp
 final/eventloop/.libs/
+final/font/Makefile.in
 final/input/.depend
 final/input/.deps/
 final/input/.dirstamp
 final/input/.libs/
-final/.libs/
 final/menu/.depend
 final/menu/.deps/
 final/menu/.dirstamp
@@ -115,27 +126,14 @@ final/widget/.depend
 final/widget/.deps/
 final/widget/.dirstamp
 final/widget/.libs/
-m4/
-test/.deps/
-test/.libs/
-test/*_test
-Makefile.in
-aclocal.m4
-ar-lib
-compile
-config.guess
-config.h.in
-config.sub
-configure
-depcomp
-doc/Makefile.in
-examples/Makefile.in
-final/Makefile.in
-final/font/Makefile.in
 finalcut.pc
 install-sh
 ltmain.sh
 m4/
 missing
 test-driver
+test/*_test
+test/.deps/
+test/.libs/
 test/Makefile.in
+typescript
