@@ -1,3 +1,6 @@
+2026-02-08  Frank Dean  <frank@fdsd.co.uk>
+	* Update autotools configuration to include all distribution files
+
 2026-02-07  Markus Gans  <guru.mail@muenster.de>
 	* Fix the termcap quirks to support OSC 4 on newer versions of tmux
 
@@ -11,6 +14,9 @@
 	* The configure script now supports compiling unit tests and examples 
 	  in a single build when you use the --with-unit-test and 
 	  --enable-compile-all arguments together
+
+2026-02-03  Frank Dean  <frank@fdsd.co.uk>
+	* Fix build failure when calling FListViewItem::setData
 
 2026-01-20  Markus Gans  <guru.mail@muenster.de>
 	* Convert the FUnicode data structure back to an array to avoid access 
